@@ -1,5 +1,12 @@
 2006-04-03  Tommi Komulainen  <tommi.komulainen@nokia.com>
 
+	* src/sapwood-pixmap.c (sapwood_pixmap_render_rects): Use clip mask
+	only if one was drawn using the tile masks from theme.
+	* src/sapwood-server.c (extract_pixmap_single): Create masks only for
+	pixbufs with alpha.
+
+2006-04-03  Tommi Komulainen  <tommi.komulainen@nokia.com>
+
 	* src/sapwood-draw.c (get_window_for_shape): Use original logic as
 	temporary fallback to give time to update the themes.
 
